[package]
name = "screeps-rs"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
rand = { version = "*", features = ["stdweb", "small_rng"] }
rand_core = "*"
screeps-game-api = {git = "https://github.com/j-browne/screeps-game-api/"}
serde = "*"
serde_derive = "*"
serde_json = "*"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
